manifests/blackpearlserv/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blackpearlserv-service
  namespace: pirates
  labels:
    app: blackpearlserv-service
spec:
  selector:
    app: blackpearlserv-service
  ports:
  - port: 9090
    name: http
  type: ClusterIP
