manifests/blackpearlserv/network.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: flyingdutchmanserv-service
  namespace: pirates
spec:
  host: flyingdutchmanserv-service.pirates.svc.cluster.local
  subsets:
  - labels:
      version: v1.0.0
    name: current

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flyingdutchmanserv-service
  namespace: pirates
spec:
  hosts:
  - flyingdutchmanserv-service
  gateways:
  - pirates-gateway
  http:
  - match:
    - uri:
        prefix: /flyingdutchmanserv
    route:
    - destination:
        host: flyingdutchmanserv-service.pirates.svc.cluster.local
        subset: current
    retries:
      attempts: 3
      perTryTimeout: 2s
